test/datalog_tests/pattern.fail.ast.expected
error: ./test/datalog_tests/pattern.fail.dl:7.12-7.13: Non-exhaustive match patterns
    match (x) {
           ^

error: ./test/datalog_tests/pattern.fail.dl:11.9-11.13: Unsatisfiable match pattern
        C11 -> true,
        ^^^^

error: ./test/datalog_tests/pattern.fail.dl:12.12-12.13: Non-exhaustive match patterns
    match (x) {
           ^

error: ./test/datalog_tests/pattern.fail.dl:15.9-15.25: Unsatisfiable match pattern
        C22{(_, C11{})} -> true  // redundant
        ^^^^^^^^^^^^^^^^

error: ./test/datalog_tests/pattern.fail.dl:16.9-16.25: Unsatisfiable match pattern
        _               -> false
        ^^^^^^^^^^^^^^^^

error: ./test/datalog_tests/pattern.fail.dl:6.12-6.13: Non-exhaustive match patterns
    match (z) {
           ^

error: ./test/datalog_tests/pattern.fail.dl:12.9-12.37: Unsatisfiable match pattern
        (false, (_,(false, false))) -> true
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: ./test/datalog_tests/pattern.fail.dl:6.12-6.13: Non-exhaustive match patterns
    match (z) {
           ^

error: ./test/datalog_tests/pattern.fail.dl:12.12-12.13: Non-exhaustive match patterns
    match (q) {
           ^

error: ./test/datalog_tests/pattern.fail.dl:12.12-12.13: Non-exhaustive match patterns
    match (q) {
           ^

error: ./test/datalog_tests/pattern.fail.dl:6.12-6.13: Non-exhaustive match patterns
    match (s) {
           ^

error: failed to parse input file: "./test/datalog_tests/pattern.fail.dl" (line 7, column 14):
unexpected 'o'
expecting operator
